[package]
name = "git-radar-rs"
version = "0.1.0"
edition = "2021"

[features]
default = [ "libgit" ]
libgit = [ "git2" ]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0"
nom = "7"
dirs = "5"
anyhow = "1"
git2 = { version = "0", optional = true }

[profile.release]
strip = true
tlo = true
panic = "abort"
opt-level = "s"