[package]
name = "git-radar-rs"
version = "0.1.1"
edition = "2021"
description = "Rust version of git-radar or gitHUD"
license = "MIT"
repository = "https://github.com/untoldwind/git-radar-rs"

[features]
default = [ "libgit" ]
libgit = [ "git2" ]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0"
nom = "7"
dirs = "5"
anyhow = "1"
git2 = { version = "0", optional = true }

[profile.release]
strip = true
tlo = true
panic = "abort"
opt-level = "s"