[package]
name = "git-radar-rs"
version = "0.1.3"
edition = "2021"
description = "Rust version of git-radar or gitHUD"
license = "MIT"
repository = "https://github.com/untoldwind/git-radar-rs"
readme = "README.md"
keywords = ["git", "git-radar"]

[features]
default = ["libgit"]
libgit = ["git2"]

[dependencies]
clap = { version = "4", features = ["cargo", "derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0"
nom = "7"
dirs = "5"
anyhow = "1"
git2 = { version = "0", optional = true }

[target.x86_64-unknown-linux-musl.dependencies]
git2 = { version = "0", optional = true, features = [
    "vendored-libgit2",
    "vendored-openssl",
] }

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "s"
